Move testSortandGetCustomSearchEngine to a junit test.

BUG=841098

Change-Id: I09726ccc545f09da0913e78f0b4e842306cbdd8f
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1894137
Commit-Queue: Ted Choc <tedchoc@chromium.org>
Reviewed-by: Pavel Yatsuk <pavely@chromium.org>
Cr-Commit-Position: refs/heads/master@{#711560}

Former-commit-id: ad8def8314bd951ea31cdc76b479f9168cb59125