components/search_engines/android/java/src/org/chromium/components/search_engines/TemplateUrl.java
@@ -86,7 +86,7 @@ public class TemplateUrl {
     }
 
     @NativeMethods
-    interface Natives {
+    public interface Natives {
         String getShortName(long templateUrlPtr);
         String getKeyword(long templateUrlPtr);
         boolean isPrepopulatedOrCreatedByPolicy(long templateUrlPtr);
